update annotation of swagger
